tests/model/misc/fo.rsmt2
sat
(model
(define-fun p ((x Int)) Bool true)
)
